@@ -1,3 +1,7 @@
+1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-ops.c (S_io_map_segment): New function.
+
 1999-07-11  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* pfinet.h: Add #include <sys/mman.h> for munmap decl.
